Create index and map components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2hfVryCSPXzxB1p03zRn3vV5BYOhtW5I">
+</script>
 
 <%= yield %>
 
